--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.3+1
+version: 1.0.4+1
 
 environment:
   sdk: ^3.8.1
@@ -43,6 +43,10 @@ dependencies:
 
   # HTTP client for API calls
   http: ^1.2.1
+
+  # OAuth for X (Twitter) authentication
+  oauth1: ^2.0.0
+  shared_preferences: ^2.2.2
 
   # WebSocket support for Nostr
   web_socket_channel: ^3.0.1
