Fix: Nostr multi-account posting, BIP-340 signature, and desktop integration for Wayland/Sway

--- a/linux/yall.desktop
+++ b/linux/yall.desktop
@@ -3,7 +3,7 @@ Type=Application
 Version=1.0
 Name=Yall
 Comment=Message to Nostr, Bluesky, and Mastodon from one place
-Exec=yall
+Exec=/home/tim/.local/bin/yall
 Icon=yall
 Terminal=false
 Categories=Network;Office;
