--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install Linux dependencies
       run: |
         sudo apt-get update -y
-        sudo apt-get install -y ninja-build libgtk-3-dev libblkid-dev liblzma-dev
+        sudo apt-get install -y ninja-build libgtk-3-dev libblkid-dev liblzma-dev libsecret-1-dev
         
     - name: Get dependencies
       run: flutter pub get
@@ -43,6 +43,7 @@ jobs:
           VERSION="${{ github.event.inputs.version }}"
         fi
         mkdir -p releases/v$VERSION
+        rm -rf releases/v$VERSION/yall-$VERSION-linux-x64
         cp -r build/linux/x64/release/bundle releases/v$VERSION/yall-$VERSION-linux-x64
         # Copy additional files to the Linux package
         cp README.md releases/v$VERSION/yall-$VERSION-linux-x64/ || true
@@ -86,7 +87,8 @@ jobs:
         $RELEASE_DIR = "releases\v$VERSION"
         $RELEASE_NAME = "yall-$VERSION-windows-x64"
         New-Item -ItemType Directory -Force -Path $RELEASE_DIR
-        Copy-Item -Recurse "build\windows\x64\runner\Release\*" "$RELEASE_DIR\$RELEASE_NAME\"
+        Remove-Item -Path "$RELEASE_DIR\$RELEASE_NAME" -Recurse -Force -ErrorAction SilentlyContinue
+        Copy-Item -Recurse "build\windows\x64\runner\Release\" "$RELEASE_DIR\$RELEASE_NAME\"
         Copy-Item "README.md" "$RELEASE_DIR\$RELEASE_NAME\" -ErrorAction SilentlyContinue
         Copy-Item "LICENSE" "$RELEASE_DIR\$RELEASE_NAME\" -ErrorAction SilentlyContinue
         Copy-Item "install-windows.bat" "$RELEASE_DIR\$RELEASE_NAME\" -ErrorAction SilentlyContinue
