--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install Linux dependencies
       run: |
         sudo apt-get update -y
-        sudo apt-get install -y ninja-build libgtk-3-dev libblkid-dev liblzma-dev libsecret-1-dev
+        sudo apt-get install -y ninja-build libgtk-3-dev libblkid-dev liblzma-dev libsecret-1-dev libayatana-appindicator3-dev
         
     - name: Get dependencies
       run: flutter pub get
@@ -92,7 +92,7 @@ jobs:
         Copy-Item "README.md" "$RELEASE_DIR\$RELEASE_NAME\" -ErrorAction SilentlyContinue
         Copy-Item "LICENSE" "$RELEASE_DIR\$RELEASE_NAME\" -ErrorAction SilentlyContinue
         Copy-Item "install-windows.bat" "$RELEASE_DIR\$RELEASE_NAME\" -ErrorAction SilentlyContinue
-        Compress-Archive -Path "$RELEASE_DIR\$RELEASE_NAME" -DestinationPath "$RELEASE_DIR\$RELEASE_NAME.zip"
+        Compress-Archive -Path "$RELEASE_DIR\$RELEASE_NAME" -DestinationPath "$RELEASE_DIR\$RELEASE_NAME.zip" -Force
         
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
