feat: Implement Accounts and History views, fix UI overflows

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "kiroAgent.configureMCP": "Disabled",
-    "debug.javascript.defaultRuntimeExecutable": {
-        "pwa-node": "c:\\users\\timap\\appdata\\local\\mise\\shims\\node"
-    },
-    "python.defaultInterpreterPath": "C:\\Users\\timap\\AppData\\Local\\mise\\installs\\python\\3.13.7\\python.exe"
+  "kiroAgent.configureMCP": "Disabled",
+  "debug.javascript.defaultRuntimeExecutable": {
+    "pwa-node": "c:\\users\\timap\\appdata\\local\\mise\\shims\\node"
+  },
+  "python.defaultInterpreterPath": "C:\\Users\\timap\\AppData\\Local\\mise\\installs\\python\\3.13.7\\python.exe",
+  "dart.flutterSdkPath": ".fvm/versions/stable"
 }
